форма каталога и попап

--- a/catalog.html
+++ b/catalog.html
@@ -60,22 +60,13 @@
             <div class="sorting">
               <label for="sorting-select" class="sorting-tittle">Сортировка:</label>
               <select class="select-control" aria-label="Сортировка" id="sorting-select">
-                <option value="popular">по пулярности</option>
+                <option value="popular">по популярности</option>
                 <option value="cheap">дешёвые</option>
                 <option value="expensive">дорогие</option>
               </select>
             </div>
             <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-tittle">Цена:</legend>
-              <div class="range-wrapper-inputs">
-                <label class="catalog-filter-label">
-                  <input class="range-bar-input input-min" type="number" name="min-price" placeholder="100 ₽">
-                </label>
-                <span>-</span>
-                <label class="catalog-filter-label catalog-filter-label-max">
-                  <input class="range-bar-input input-max" type="number" name="max-price" placeholder="500 ₽">
-                </label>
-              </div>
+              <legend class="catalog-filter-tittle">Цена: 100 ₽ – 500 ₽</legend>
               <div class="range">
                 <div class="range-scale">
                   <div class="range-bar">
@@ -172,7 +163,7 @@
           <ul class="product-list">
             <li class="product-list-item">
               <a class="product-link" href="#">
-                <img class="product-image" src="/images/catalog/malinka.png" width="168" height="168"
+                <img class="icecream-image" src="/images/catalog/malinka.png" width="168" height="168"
                   alt="ярко-красный шарик мороженого.">
                 <p class="icecream-name">Малинка</p>
                 <p class="icecream-text">Сливочное мороженое с малиновым джемом</p>
@@ -191,7 +182,7 @@
             </li>
             <li class="product-list-item">
               <a class="product-link" href="#">
-                <img class="product-image" src="/images/catalog/phistachio.png" width="168" height="168"
+                <img class="icecream-image" src="/images/catalog/phistachio.png" width="168" height="168"
                   alt="фисташковое мороженое с шоколадной крошкой.">
                 <p class="icecream-name">Фисташка</p>
                 <p class="icecream-text">Фисташковый пломбир с кусочками шоколада</p>
@@ -210,7 +201,7 @@
             </li>
             <li class="product-list-item">
               <a class="product-link" href="#">
-                <img class="product-image" src="/images/catalog/chernika.png" width="168" height="168"
+                <img class="icecream-image" src="/images/catalog/chernika.png" width="168" height="168"
                   alt="шарик крем-брюле с прослойкой черничного джема.">
                 <p class="icecream-name">Черника</p>
                 <p class="icecream-text">Крем-брюле с черничным джемом</p>
@@ -229,7 +220,7 @@
             </li>
             <li class="product-list-item">
               <a class="product-link" href="#">
-                <img class="product-image" src="/images/catalog/bubble-gum.png" width="168" height="168"
+                <img class="icecream-image" src="/images/catalog/bubble-gum.png" width="168" height="168"
                   alt="Шарик мороженого голубого цвета с разноцветной крошкой.">
                 <p class="icecream-name">Бабл-гам</p>
                 <p class="icecream-text">Ванильный пломбир со сладкой посыпкой</p>
@@ -248,7 +239,7 @@
             </li>
             <li class="product-list-item">
               <a class="product-link" href="#">
-                <img class="product-image" src="/images/catalog/ezhevika.png" width="168" height="168"
+                <img class="icecream-image" src="/images/catalog/ezhevika.png" width="168" height="168"
                   alt="нежный пломбир с ежевикой.">
                 <p class="icecream-name">Ежевика</p>
                 <p class="icecream-text">Сливочное мороженое с ежевичным джемом</p>
@@ -267,7 +258,7 @@
             </li>
             <li class="product-list-item">
               <a class="product-link" href="#">
-                <img class="product-image" src="/images/catalog/banana.png" width="168" height="168"
+                <img class="icecream-image" src="/images/catalog/banana.png" width="168" height="168"
                   alt="легкое мороженое с бананом.">
                 <p class="icecream-name">Банан</p>
                 <p class="icecream-text">Сливочный пломбир с банановым вкусом</p>
@@ -286,7 +277,7 @@
             </li>
             <li class="product-list-item">
               <a class="product-link" href="#">
-                <img class="product-image" src="/images/catalog/chocolate.png" width="168" height="168"
+                <img class="icecream-image" src="/images/catalog/chocolate.png" width="168" height="168"
                   alt="стандартное шоколадное мороженое.">
                 <p class="icecream-name">Шоколадка</p>
                 <p class="icecream-text">Классический шоколадный пломбир</p>
@@ -305,7 +296,7 @@
             </li>
             <li class="product-list-item">
               <a class="product-link" href="#">
-                <img class="product-image" src="/images/catalog/strawberry.png" width="168" height="168"
+                <img class="icecream-image" src="/images/catalog/strawberry.png" width="168" height="168"
                   alt="пломбир с клубничкой.">
                 <p class="icecream-name">Клубничка</p>
                 <p class="icecream-text">Сливочный пломбир с клубничным вкусом</p>
@@ -324,7 +315,7 @@
             </li>
             <li class="product-list-item">
               <a class="product-link" href="#">
-                <img class="product-image" src="/images/catalog/lemon.png" width="168" height="168"
+                <img class="icecream-image" src="/images/catalog/lemon.png" width="168" height="168"
                   alt="мроженое с терпким лимонным вкусом.">
                 <p class="icecream-name">Лимон</p>
                 <span class="icecream-text">Освежающий лимонный сорбет</span>
@@ -343,7 +334,7 @@
             </li>
             <li class="product-list-item">
               <a class="product-link" href="#">
-                <img class="product-image" src="/images/catalog/menthol.png" width="168" height="168"
+                <img class="icecream-image" src="/images/catalog/menthol.png" width="168" height="168"
                   alt="мороженое с приятным холодком.">
                 <p class="icecream-name">Ментол</p>
                 <p class="icecream-text">Сливочный пломбир с ментоловым сиропом</p>
@@ -362,7 +353,7 @@
             </li>
             <li class="product-list-item">
               <a class="product-link" href="#">
-                <img class="product-image" src="/images/catalog/nut.png" width="168" height="168"
+                <img class="icecream-image" src="/images/catalog/nut.png" width="168" height="168"
                   alt="пломбир в сочетании с фисташкой.">
                 <p class="icecream-name">Орешек</p>
                 <p class="icecream-text">Фисташковый пломбир с шоколадным сиропом</p>
@@ -381,7 +372,7 @@
             </li>
             <li class="product-list-item">
               <a class="product-link" href="#">
-                <img class="product-image" src="/images/catalog/creme.png" width="168" height="168"
+                <img class="icecream-image" src="/images/catalog/creme.png" width="168" height="168"
                   alt="сладкое мороженое без лишнего.">
                 <p class="icecream-name">Крем-брюле</p>
                 <p class="icecream-text">Классическое крем-брюле</p>
@@ -403,11 +394,11 @@
       </div>
       <div class="content-wrapper card-options-wrapper">
         <button class="button pagination-show-more" type="button">Показать еще</button>
-        <div class="pagination-wrapper">
-          <a class="pagination-button" href="#">
-            <span class="visually-hidden">предыдущая страница.</span>
-          </a>
-          <ul class="pagination">
+        <div class="pagination">
+          <button class="pagination-button pagination-button-prev" type="button">
+            <span class="visually-hidden">Предыдущая страница</span>
+          </button>
+          <ul class="pagination-list">
             <li class="pagination-item">
               <a class="pagination-link" href="#">1</a>
             </li>
@@ -415,7 +406,7 @@
               <a class="pagination-link" href="#">2</a>
             </li>
             <li class="pagination-item">
-              <a class="pagination-link pagination-current">3</a>
+              <a class="pagination-link active" href="#">3</a>
             </li>
             <li class="pagination-item">
               <a class="pagination-link" href="#">4</a>
@@ -424,9 +415,9 @@
               <a class="pagination-link" href="#">5</a>
             </li>
           </ul>
-          <a class="pagination-button" href="#">
-            <span class="visually-hidden">следующая страница.</span>
-          </a>
+          <button class="pagination-button pagination-button-next" type="button">
+            <span class="visually-hidden">Следующая страница</span>
+          </button>
         </div>
       </div>
     </main>
@@ -450,16 +441,16 @@
       </ul>
       <ul class="footer-about-list">
         <li class="footer-about-item">
-          <a class="footer-about-link is-current">Для поставщиков</a>
+          <a class="footer-about-link is-current" href="#">Для поставщиков</a>
         </li>
         <li class="footer-about-item">
-          <a class="footer-about-link">Наши документы</a>
+          <a class="footer-about-link" href="#">Наши документы</a>
         </li>
         <li class="footer-about-item">
-          <a class="footer-about-link">О производстве</a>
+          <a class="footer-about-link" href="#">О производстве</a>
         </li>
         <li class="footer-about-item">
-          <a class="footer-about-link">Экологические стандарты</a>
+          <a class="footer-about-link" href="#">Экологические стандарты</a>
         </li>
       </ul>
       <a class="made-by-link" href="https://htmlacademy.ru/ ">
