--- a/index.html
+++ b/index.html
@@ -16,28 +16,114 @@
           </a>
           <div class="navigation-left">
             <ul class="navigation-list">
-              <li class="navigation-list-item">
-                <a class="navigation-link" href="catalog.html">Каталог</a>
+              <li class="navigation-list-item submenu-list">
+                <a class="navigation-link header-link" href="catalog.html">Каталог</a>
+                <div class="navigation-link-submenu">
+                  <p class="submenu-text">Новинки</p>
+                  <ul class="submenu">
+                    <li class="submenu-item">
+                      <a class="submenu-item-link" href="#">Сливочное</a>
+                    </li>
+                    <li class="submenu-item">
+                      <a class="submenu-item-link" href="#">Щербеты</a>
+                    </li>
+                    <li class="submenu-item">
+                      <a class="submenu-item-link" href="#">Фруктовый лед</a>
+                    </li>
+                    <li class="submenu-item">
+                      <a class="submenu-item-link" href="#">Мелорин</a>
+                    </li>
+                  </ul>
+                </div>
               </li>
               <li class="navigation-list-item">
-                <a class="navigation-link" href="#">Доставка и оплата</a>
+                <a class="navigation-link header-link" href="#">Доставка и оплата</a>
               </li>
               <li class="navigation-list-item">
-                <a class="navigation-link" href="#">О компании</a>
+                <a class="navigation-link header-link" href="#">О компании</a>
               </li>
-            </ul>
+
           </div>
-          <div class="user-menu">
-            <a class="contacts-phone" href="tel:+78005558628">+7 (800) 555-86-28</a>
-            <form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
-              <button class="searh" type="button">открыть</button>
-              <label for="search"></label>
-              <input class="visually-hidden" type="text" id="search">
-            </form>
-            <button class="button-auth button-login" type="button">Вход</button>
-            <a class="navigation-link cart-link" href="#">2 товара</a>
-          </div>
-        </div>
+          <ul class="navigation-list navigation-user">
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-phone" href="tel:+78005558628">+7 800 555-86-28</a>
+            </li>
+            <li class="navigation-item">
+              <button type="button" class="navigation-link header-link header-button navigation-link-search">
+                <svg width="16" height="17" fill="none" viewBox="0 0 16 17"  xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path fill-rule="evenodd" clip-rule="evenodd" d="M2.66 8.19a4.67 4.67 0 1 1 9.34 0 4.67 4.67 0 0 1-9.34 0Zm8.42 4.69a6 6 0 1 1 .94-.94l2.45 2.44a.67.67 0 1 1-.94.95l-2.45-2.45Z" fill="#2D3440"/></svg>
+                <span class="visually-hidden">Поиск.</span>
+              </button>
+
+              <div class="header-popap header-popap-search">
+                <form class="header-popap-form" action="https://echo.htmlacademy.ru">
+                  <input class="header-popap-input page-input" name="search" type="search" placeholder="Поиск по сайту">
+                </form>
+              </div>
+            </li>
+            <li class="navigation-item">
+              <button type="button" class="navigation-link header-link header-button navigation-link-personal-account">
+                <svg width="16" height="17" fill="none" viewBox="0 0 16 17" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path fill-rule="evenodd" clip-rule="evenodd" d="M9 2.52c0-.36.3-.66.67-.66h2.66a2 2 0 0 1 2 2v9.33a2 2 0 0 1-2 2H9.67a.67.67 0 0 1 0-1.33h2.66a.67.67 0 0 0 .67-.67V3.86a.67.67 0 0 0-.67-.67H9.67A.67.67 0 0 1 9 2.52Zm-3.14 2.2a.67.67 0 0 1 .94 0l3.33 3.33a.69.69 0 0 1 .13.18.66.66 0 0 1-.13.77L6.8 12.33a.67.67 0 1 1-.94-.94l2.2-2.2h-6.4a.67.67 0 1 1 0-1.33h6.4l-2.2-2.2a.67.67 0 0 1 0-.94Z" fill="#2D3440"/></svg>
+                <span class="header-button-text">Вход</span>
+              </button>
+
+              <div class="header-popap header-popap-personal">
+                <p class="header-popap-title">Личный кабинет</p>
+                <form class="header-popap-form" action="https://echo.htmlacademy.ru">
+                  <div class="header-popap-form-inner">
+                    <input class="header-popap-input page-input" name="email" type="email" placeholder="email@example.com">
+                    <input class="header-popap-input page-input" name="password" type="password" value="dsadas">
+                  </div>
+                  <div class="header-popap-form-bottom">
+                    <button type="submit" class="page-button">Войти</button>
+                    <div class="header-popap-form-links">
+                      <a href="#" class="header-popap-form-link">Забыли пароль?</a>
+                      <a href="#" class="header-popap-form-link">Регистрация</a>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </li>
+            <li class="navigation-item">
+              <button type="button" class="navigation-link header-link header-button navigation-link-basket">
+                <svg width="16" height="17" fill="none" viewBox="0 0 16 17" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 2.1a.67.67 0 0 0 0 1.34h1.77l.47 2.34v.05l.97 4.83a1.83 1.83 0 0 0 1.82 1.47h5.62a1.83 1.83 0 0 0 1.82-1.47l.93-4.86a.67.67 0 0 0-.66-.8h-9.3l-.47-2.36a.67.67 0 0 0-.66-.53H1.17Zm4.52 8.3-.81-4.06h8.23l-.78 4.07a.5.5 0 0 1-.49.39H6.18a.5.5 0 0 1-.49-.4Zm-1.13 3.96a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#2D3440"/></svg>
+                <span class="header-button-text">2 товара</span>
+              </button>
+              <div class="header-popap">
+                <p class="header-popap-title">Корзина</p>
+                <ul class="header-popap-list">
+                  <li class="header-popap-item">
+                    <img class="basket-product-img" src="./images/product-1.png" alt="" width="46" height="46">
+                    <div class="basket-product-content">
+                      <p class="basket-product-title">Малинка</h6>
+                      <p class="basket-product-info">1 кг х 310 ₽</p>
+                    </div>
+                    <p class="basket-product-price">310 ₽</p>
+                    <button class="basket-product-delete" type="button">
+                      <span class="visually-hidden">Удалить</span>
+                    </button>
+                  </li>
+                  <li class="header-popap-item">
+                    <img class="basket-product-img" src="./images/product-4.png" alt="" width="46" height="46">
+                    <div class="basket-product-content">
+                      <p class="basket-product-title">Бабл-гам</h6>
+                      <p class="basket-product-info">1,5 кг х 320 ₽</p>
+                    </div>
+                    <p class="basket-product-price">480 ₽</p>
+                    <button class="basket-product-delete" type="button">
+                      <span class="visually-hidden">Удалить</span>
+                    </button>
+                  </li>
+                </ul>
+                <div class="header-popap-bottom">
+                  <button type="button" class="page-button header-popap-button">Оформить заказ</button>
+                  <span class="header-popap-price">Итого: 790 ₽</span>
+                </div>
+              </div>
+              <div class="header-popap header-popap-empty">
+                <p class="header-popap-title">Ваша корзина пока<br> пуста</p>
+              </div>
+            </li>
+          </ul>
       </nav>
     </header>
 
@@ -105,7 +191,7 @@
                 </div>
                 <div class="image-wrapper">
                   <img class="slider-image" src="/images/slider-strawberry.png"
-                  alt="Рожок с красным топпингом на белом пломбире." width="306" height="507">
+                    alt="Рожок с красным топпингом на белом пломбире." width="306" height="507">
                 </div>
                 <div class="image-wrapper">
                   <img class="slider-image" src="/images/slider-banana.png"
@@ -188,13 +274,15 @@
           <div class="bonus-gift-wrapper">
             <div class="bonus-wrapper bonus-raspberry">
               <h3 class="gift-tittle raspberry-tittle">Малинка даром!</h3>
-              <p class="gift-text">При покупке 2 кг любого фруктового<br> мороженого добавим в ваш заказ банку<br> малинового варенья
+              <p class="gift-text">При покупке 2 кг любого фруктового<br> мороженого добавим в ваш заказ банку<br>
+                малинового варенья
                 бесплатно.</p>
               <a class="button gift-button" href="#">Хочу подарок</a>
             </div>
             <div class="bonus-wrapper bonus-marshmellow">
               <h3 class="gift-tittle raspberry-tittle">Маршмеллоу даром!</h3>
-              <p  class="gift-text">При покупке 2 кг пломбира добавим<br> в ваш заказ упаковку нежных<br> зефирок совершенно бесплатно.</p>
+              <p class="gift-text">При покупке 2 кг пломбира добавим<br> в ваш заказ упаковку нежных<br> зефирок
+                совершенно бесплатно.</p>
               <a class="button gift-button" href="#">Хочу подарок</a>
             </div>
           </div>
@@ -319,7 +407,9 @@
         <div class="content-wrapper news-wrapper">
           <div class="news blog">
             <p class="blog-tittle">Новое в нашем блоге</p>
-            <p class="blog-text">10 способов сервировки<br> фруктовых щербетов<br> к столу</p>
+            <a class="info-link" href="">
+              <p class="blog-text">10 способов сервировки<br> фруктовых щербетов<br> к столу</p>
+            </a>
           </div>
           <div class="news subscribe">
             <p class="subscribe-text">Подпишитесь на нашу сладкую рассылку и будьте всегда<br>
@@ -420,16 +510,16 @@
       </ul>
       <ul class="footer-about-list">
         <li class="footer-about-item">
-          <a class="footer-about-link is-current">Для поставщиков</a>
+          <a class="footer-about-link is-current" href="#">Для поставщиков</a>
         </li>
         <li class="footer-about-item">
-          <a class="footer-about-link">Наши документы</a>
+          <a class="footer-about-link" href="#">Наши документы</a>
         </li>
         <li class="footer-about-item">
-          <a class="footer-about-link">О производстве</a>
+          <a class="footer-about-link" href="#">О производстве</a>
         </li>
         <li class="footer-about-item">
-          <a class="footer-about-link">Экологические стандарты</a>
+          <a class="footer-about-link" href="#">Экологические стандарты</a>
         </li>
       </ul>
       <a class="made-by-link" href="https://htmlacademy.ru/ ">
