--- a/index.html
+++ b/index.html
@@ -564,27 +564,32 @@
           </a>
         </li>
       </ul>
-      <ul class="footer-about-list">
-        <li class="footer-about-item">
-          <a class="footer-about-link is-current" href="#">Для поставщиков</a>
-        </li>
-        <li class="footer-about-item">
-          <a class="footer-about-link" href="#">Наши документы</a>
-        </li>
-        <li class="footer-about-item">
-          <a class="footer-about-link" href="#">О производстве</a>
-        </li>
-        <li class="footer-about-item">
-          <a class="footer-about-link" href="#">Экологические стандарты</a>
-        </li>
-      </ul>
+      <div class="footer-about-wrapper">
+        <ul class="footer-about-list">
+          <li class="footer-about-item">
+            <a class="footer-about-link is-current" href="#">Для поставщиков</a>
+          </li>
+          <li class="footer-about-item">
+            <a class="footer-about-link" href="#">О производстве</a>
+          </li>
+        </ul>
+        <ul class="footer-about-list">
+          <li class="footer-about-item">
+            <a class="footer-about-link" href="#">Наши документы</a>
+          </li>
+          <li class="footer-about-item">
+            <a class="footer-about-link" href="#">Экологические стандарты</a>
+          </li>
+        </ul>
+      </div>
       <div class="footer-copyright">
         <a href="https://htmlacademy.ru/" target="_blank">
           <img class="footer-logo" src="./images/made-by.svg" width="93" height="27" alt="Html academy.">
         </a>
         <p class="footer-copyright-text">Сделано в
           <a class="made-by-link" href="https://htmlacademy.ru/" target="_blank">.html academy</a> ©
-          2021</p>
+          2021
+        </p>
       </div>
     </footer>
     <div class="modal">
